--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,36 +8,22 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="512dp" />
-
-    <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="560dp" />
+        android:layout_width="144dp"
+        android:layout_height="47dp"
+        android:background="@color/white"
+        android:text="Register"
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="511dp" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="464dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="408dp" />
+        android:id="@+id/button"
+        android:layout_width="144dp"
+        android:layout_height="48dp"
+        android:background="@color/white"
+        android:text="Login"
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="451dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -46,9 +32,27 @@
         android:fontFamily="sans-serif-condensed-medium"
         android:text="CharityApp"
         android:textAlignment="center"
+        android:textColor="#ECE2E2"
         android:textSize="60sp"
         android:typeface="normal"
         tools:layout_editor_absoluteX="45dp"
         tools:layout_editor_absoluteY="59dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:text="Forgot password?"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="586dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Buraya aciklayici bir seyler yazilabilir"
+        tools:layout_editor_absoluteX="92dp"
+        tools:layout_editor_absoluteY="257dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
