--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,52 +7,13 @@
     android:background="#F15656"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="144dp"
-        android:layout_height="47dp"
-        android:background="@color/white"
-        android:text="Regıster"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="511dp" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="144dp"
-        android:layout_height="48dp"
-        android:background="@color/white"
-        android:text="Logın"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="451dp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="314dp"
-        android:layout_height="86dp"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:text="CharityApp"
-        android:textAlignment="center"
-        android:textColor="#ECE2E2"
-        android:textSize="60sp"
-        android:typeface="normal"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="59dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="Forgot password?"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="586dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="335dp"
-        android:layout_height="38dp"
-        android:text="Buraya aciklayici bir seyler yazilabilir ya da bi illustrasyon konulabilir"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="272dp" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
