--- a/app/src/main/res/layout/fragment_choose_login_type.xml
+++ b/app/src/main/res/layout/fragment_choose_login_type.xml
@@ -13,61 +13,70 @@
     tools:context=".ui.login.ChooseLoginType">
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="286dp"
+        android:id="@+id/textView"
+        android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="Choose Login Type"
-        android:textAlignment="textStart"
         android:textColor="#ECE2E2"
         android:textSize="34sp"
         android:typeface="normal"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="64dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnCarrier"
         android:layout_width="132dp"
         android:layout_height="45dp"
+        android:layout_marginTop="16dp"
         android:text="CARRIER"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="407dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btnUser"
+        app:layout_constraintStart_toStartOf="@+id/btnUser"
+        app:layout_constraintTop_toBottomOf="@+id/btnUser" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnBenefactor"
         android:layout_width="132dp"
         android:layout_height="45dp"
+        android:layout_marginTop="16dp"
         android:text="BENEFACTOR"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="456dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btnCarrier"
+        app:layout_constraintStart_toStartOf="@+id/btnCarrier"
+        app:layout_constraintTop_toBottomOf="@+id/btnCarrier" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btnAdmin"
         android:layout_width="132dp"
         android:layout_height="45dp"
+        android:layout_marginTop="16dp"
         android:text="ADMIN"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="504dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btnBenefactor"
+        app:layout_constraintStart_toStartOf="@+id/btnBenefactor"
+        app:layout_constraintTop_toBottomOf="@+id/btnBenefactor" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnUser"
         android:layout_width="132dp"
         android:layout_height="45dp"
+        android:layout_marginTop="128dp"
         android:text="USER"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="357dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
